kustomize/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: testapp
spec:
  minReadySeconds:
  replicas:
  selector:
    matchLabels:
      name: testapp
  strategy:
    rollingUpdate:
      maxSurge:
      maxUnavailable:
  template:
    metadata:
      labels:
        name: testapp
    spec:
      imagePullSecrets:
        - name: 0zh-registry-cred
      containers:
        - name: testapp
          image: testapp_image
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          command:
            - npm
            - start
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64M
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "10"]
